--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>2.0.0-beta2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
